--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,36 @@
 }
 
 body {
-    margin: 3em;
-    font-family: 'Courier New', Courier, monospace;
+    /* margin: 3em; */
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    background-color: rgb(125, 134, 255);
 }
 
 .sidebar {
     /* los porcentajes son una medida relativa al tamaño del contenedor padre */
     height: 100%;
     width: 250px;
+    background-color: midnightblue;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar a {
+    text-align: center;
+    padding: 1em 0;
+    text-decoration: none;
+    color: deeppink;
+    transition: 0.35s;
+
+}
+
+.sidebar a:hover {
+    background-color: rgb(18, 18, 190);
+    font-weight: bold;
+}
+
+#content{
+    margin-left: 250px;
+    padding: 2em;
 }
