--- a/css/styles.css
+++ b/css/styles.css
@@ -37,5 +37,30 @@ body {
 
 #content{
     margin-left: 250px;
+}
+
+#content .titles {
     padding: 2em;
+}
+
+#gallery {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+
+#gallery .column {
+    flex: 25%;
+    /* funciona esencialmente igual q un width */
+    padding: 0 4px;
+}
+
+#gallery .column img {
+    margin-top: 8px;
 }
